# stream-mind

./: .gitignore  docker-compose.yml
.github/workflows/: deploy-firebase.yml
frontend/: .firebaserc  Dockerfile  package-lock.json  package.json  playwright.config.ts
frontend/e2e/: streammind.spec.ts
frontend/public/: manifest.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/history/: page.tsx
frontend/src/app/profile/: page.tsx
frontend/src/components/: BottomNav.tsx  DismissPopup.tsx  Hero.tsx  InstallPrompt.tsx  Lane.tsx  MoodChips.tsx  MovieCard.tsx  MovieDetails.tsx  Navbar.tsx  SearchBar.tsx  SimilarMovies.tsx  Skeleton.tsx  Toast.tsx
frontend/src/lib/: api.ts  identity.ts  storage.ts  types.ts
proto/streammind/v1/: service.proto
scripts/: build_movie_dataset.py  dev.sh  generate_test_data.py  requirements.txt  runpod_start.sh
services/embedding_service/: Dockerfile  main.py  requirements.txt
services/recommendation_service/: Dockerfile  generate_protos.sh  pyproject.toml
services/recommendation_service/src/streammind_rec/: main.py
services/recommendation_service/src/streammind_rec/api/grpc/: server.py
services/recommendation_service/src/streammind_rec/infra/: loader.py
services/recommendation_service/src/streammind_rec/search/: pipeline.py
services/recommendation_service/src/streammind_rec/search/knn/: exact.py
services/recommendation_service/src/streammind_rec/search/rerankers/: gs_reranker.py
services/recommendation_service/src/streammind_rec/search/state/: movie_state.py
(+2 files in other folders)
