[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "streammind-rec"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "grpclib>=0.4.7",
    "grpcio-tools>=1.60.0",
    "protobuf>=4.25.0",
    "numpy>=1.24.0",
    "pyarrow>=14.0.0",
    "httpx>=0.27.0",
    "aioboto3>=13.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
